--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,25 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/customcss.css" rel="stylesheet" />
     </head>
+    <header>    
+        <style>
+        #intro {
+          background-image: url(https://mdbootstrap.com/img/new/fluid/city/008.jpg);
+          height: 100vh;
+        }
+        /* Height for devices larger than 576px */
+        @media (min-width: 992px) {
+          #intro {
+            margin-top: -58.59px;
+          }
+        }
+        .navbar .nav-link {
+          color: #fff !important;
+        }
+      </style>
+      </header>
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
             <!-- Navigation-->
@@ -47,17 +65,23 @@
                 </div>
             </nav>
             <!-- Page content-->
-            <section class="py-5">
-                <div class="container px-5">
+            <section class="pt-5">
+                    <!-- Background image -->
+    <div id="intro" class="bg-image shadow-2-strong">
+        <div class="mask d-flex h-100" style="background-color: rgba(0, 0, 0, 0.8);">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-xl-5 col-md-8 mt-5">
+                <form>
                     <!-- Contact form-->
-                    <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
-                        <div class="text-center mb-5">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
+                    <div class="bg-light rounded-3">
+                        <div class="text-center">
+                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3 mt-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Get in touch</h1>
-                            <p class="lead fw-normal text-muted mb-0">We'd love to hear from you</p>
+                            <p class="lead fw-normal text-muted mb-0">I'd love to hear from you</p>
                         </div>
                         <div class="row gx-5 justify-content-center">
-                            <div class="col-lg-8 col-xl-6">
+                            <div class="col-lg-8">
                                 <!-- * * * * * * * * * * * * * * *-->
                                 <!-- * * SB Forms Contact Form * *-->
                                 <!-- * * * * * * * * * * * * * * *-->
@@ -74,7 +98,7 @@
                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
             </div>
             <!-- Email address input-->
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 mt-3">
                 <input class="form-control" type="email" placeholder="Enter your email..." data-sb-validations="required,email" name="email" />
                 <label for="email">Email Address</label>
                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
@@ -107,38 +131,15 @@
             <!-- an error submitting the form-->
             <button class="btn btn-outline-dark" type="submit">Send</button>
         </p>
-      </form>
+    </form>
                             </div>
-                        </div>
-                    </div>
-                    <!-- Contact cards-->
-                    <div class="row gx-5 row-cols-2 row-cols-lg-4 py-5">
-                        <div class="col">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
-                            <div class="h5 mb-2">Chat with us</div>
-                            <p class="text-muted mb-0">Chat live with one of our support specialists.</p>
-                        </div>
-                        <div class="col">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
-                            <div class="h5">Ask the community</div>
-                            <p class="text-muted mb-0">Explore our community forums and communicate with other users.</p>
-                        </div>
-                        <div class="col">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-question-circle"></i></div>
-                            <div class="h5">Support center</div>
-                            <p class="text-muted mb-0">Browse FAQ's and support articles to find solutions.</p>
-                        </div>
-                        <div class="col">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-telephone"></i></div>
-                            <div class="h5">Call us</div>
-                            <p class="text-muted mb-0">Call us during normal business hours at (555) 892-9403.</p>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto">
+        <footer class="bg-dark py-4 mt-auto sticky-bottom">
             <div class="container">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; BP5 Creations 2022</div></div>
